--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Harmaa-linna-eli-Kertomus-Ristilan-hovista_68509
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Ingelius, A. G.
     gutenberg_agent_id: '54804'
     url: http://www.gutenberg.org/2009/agents/54804
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68509#Harmaa-linna-eli-Kertomus-Ristilan-hovista
 gutenberg_issued: '2022-07-12'
 identifiers:
   gutenberg: '68509'
